--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@alan-ai/alan-sdk-web": "^1.8.35",
     "@chakra-ui/react": "^2.0.2",
     "@craco/craco": "^6.4.3",
     "@emotion/react": "^11.9.0",
@@ -19,6 +20,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "classnames": "^2.3.2",
     "cors": "^2.8.5",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
